Some changes: 1. Get ride of the concept of FilterCondition and replace it with Concept of just Filters. To express "AND", "OR" relation between filters, now we can use CompositeFilter. 2. Add AggregatorFilter to be used in having clause of "group by" operation. 3. Fix unit tests